# llm-file-organizer

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  release.yml  secret-scan.yml
src/: __init__.py  app.py  cache.py  classifier.py  config.py  prefetch.py  scanner.py  viewer.py
tests/: test_app.py  test_cache.py  test_classifier.py  test_config.py  test_prefetch.py  test_scanner.py
